--- a/src/app/components/swiper/swiper-styles.css
+++ b/src/app/components/swiper/swiper-styles.css
@@ -8,48 +8,65 @@
 
 .images-container {
   width: 100%;
+  height: 300px;
+  position: relative;
   display: flex;
-  /* overflow: hidden; */
-  height: 300px; /* Adjust as needed */
-  transition: all 0.7s ease-in;
+  align-items: center;
+  background-color: white;
+  overflow: hidden;
+  /* Adjust as needed */
+  /* transition: all 0.7s ease-in; */
 }
 
 .image {
-  width: 180px;
-
-  /* position: absolute; */
+  width: 280px;
+  position: absolute;
   transition: all 0.7s ease;
 }
 
+.transitioning {
+  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
+}
+
 .image-0 {
-  /* translate: 0; */
-  transform: translateX(0) scale(0.3);
+  translate: 0;
+  transform: scale(0.3);
   z-index: 1;
   left: 0;
+  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
 }
 
 .image-1 {
-  transform: translateX(20%) scale(0.5);
+  translate: 20%;
+  transform: scale(0.5);
   z-index: 2;
   left: 20%;
+  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
 }
 
 .image-2 {
-  transform: translateX(40%) scale(0.7);
+  translate: 40%;
+  transform: scale(0.7);
   z-index: 3;
+
   left: 40%;
+  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
 }
 
 .image-3 {
   transform: translateX(60%) scale(0.9);
   z-index: 4;
+
   left: 60%;
+  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
 }
 
 .image-4 {
   transform: translateX(80%) scale(1);
   z-index: 5;
+
   left: 80%;
+  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
 }
 
 button {
