--- a/src/app/components/swiper/swiper-styles.css
+++ b/src/app/components/swiper/swiper-styles.css
@@ -6,67 +6,85 @@
   height: 100vh;
 }
 
-.images-container {
-  width: 100%;
-  height: 300px;
-  position: relative;
-  display: flex;
-  align-items: center;
-  background-color: white;
+.img-wrapper {
+  width: 90%;
+  /* background-color: white; */
   overflow: hidden;
-  /* Adjust as needed */
-  /* transition: all 0.7s ease-in; */
+  height: 300px;
 }
 
+.images-container {
+  min-width: 50%;
+  height: 300px;
+  background-color: blue;
+  /* position: relative; */
+  display: flex;
+  /* align-items: center; */
+  flex-shrink: 0;
+  overflow: hidden;
+  /* Adjust as needed */
+  transition: translate 0.7s ease-in;
+}
+
+/* .container {
+  width: 30rem;
+  height: 300px;
+  object-fit: cover;
+  background-color: red;
+} */
+
 .image {
-  width: 280px;
-  position: absolute;
+  width: 100%;
+  height: 300px;
+  display: absolute;
+  top: 0;
+  left: 0;
   transition: all 0.7s ease;
 }
 
-.transitioning {
+/* .transitioning {
   transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
-}
+} */
 
 .image-0 {
-  translate: 0;
+  /* translate: 0; */
   transform: scale(0.3);
-  z-index: 1;
+  /* z-index: 1;
   left: 0;
-  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
+  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out; */
 }
 
 .image-1 {
-  translate: 20%;
+  /* translate: 20%; */
   transform: scale(0.5);
-  z-index: 2;
+  /* z-index: 2;
   left: 20%;
-  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
+  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out; */
 }
 
 .image-2 {
-  translate: 40%;
+  /* translate: 40%; */
   transform: scale(0.7);
-  z-index: 3;
+  /* z-index: 3;
 
   left: 40%;
-  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
+  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out; */
 }
 
 .image-3 {
-  transform: translateX(60%) scale(0.9);
-  z-index: 4;
+  transform: scale(0.9);
+  /* z-index: 4;
 
   left: 60%;
-  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
+  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out; */
 }
 
 .image-4 {
-  transform: translateX(80%) scale(1);
-  z-index: 5;
+  transform: scale(1);
+  /* z-index: 5;
 
   left: 80%;
-  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
+  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out; */
 }
 
 button {
