--- a/src/app/components/swiper/swiper-styles.css
+++ b/src/app/components/swiper/swiper-styles.css
@@ -1,90 +1,89 @@
 .image-slider {
-  width: 100vw;
+  width: 80vw;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100vh;
 }
 
 .img-wrapper {
   width: 90%;
-  /* background-color: white; */
+  height: 100%;
+  background-color: white;
   overflow: hidden;
-  height: 300px;
+  padding: 0 1rem;
 }
 
 .images-container {
-  min-width: 50%;
-  height: 300px;
-  background-color: blue;
-  /* position: relative; */
+  min-width: 100%;
+  height: 80%;
   display: flex;
-  /* align-items: center; */
+  align-items: flex-end;
   flex-shrink: 0;
-  overflow: hidden;
-  /* Adjust as needed */
-  transition: translate 0.7s ease-in;
+  transition: all 0.7s ease-in;
 }
 
-/* .container {
-  width: 30rem;
-  height: 300px;
-  object-fit: cover;
-  background-color: red;
-} */
+.container {
+  width: 20%;
+  height: 100%;
+  flex-shrink: 0;
+  display: flex;
+  align-items: flex-end;
+}
 
-.image {
+.container:not(:first-child) {
+  margin-left: 2%;
+}
+
+img {
   width: 100%;
-  height: 300px;
-  display: absolute;
-  top: 0;
-  left: 0;
-  transition: all 0.7s ease;
+  height: 100%;
+  object-fit: cover;
+  flex-shrink: 0;
+  transition: height 0.7s ease;
 }
 
-/* .transitioning {
-  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
-} */
+.image--1,
+.image-0,
+.image-1,
+.image-2,
+.image-3,
+.image-4 {
+  transition: all 0.7s ease-in;
+}
+
+.image--1 {
+  height: 50%;
+  filter: blur(5px);
+}
 
 .image-0 {
-  /* translate: 0; */
-  transform: scale(0.3);
-  /* z-index: 1;
-  left: 0;
-  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out; */
+  height: 50%;
+  width: 10%;
+  filter: blur(5px);
 }
 
 .image-1 {
-  /* translate: 20%; */
-  transform: scale(0.5);
-  /* z-index: 2;
-  left: 20%;
-  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out; */
+  height: 60%;
+  filter: blur(2px);
 }
 
 .image-2 {
-  /* translate: 40%; */
-  transform: scale(0.7);
-  /* z-index: 3;
-
-  left: 40%;
-  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out; */
+  height: 70%;
+  filter: blur(1.5px);
 }
 
 .image-3 {
-  transform: scale(0.9);
-  /* z-index: 4;
-
-  left: 60%;
-  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out; */
+  height: 80%;
+  opacity: 0.9;
 }
 
 .image-4 {
-  transform: scale(1);
-  /* z-index: 5;
+  height: 90%;
+}
 
-  left: 80%;
-  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out; */
+.image-5 {
+  height: 90%;
 }
 
 button {
