--- a/src/app/components/atoms/button/button-styles.scss
+++ b/src/app/components/atoms/button/button-styles.scss
@@ -1,5 +1,5 @@
 .button {
-  @apply py-3 px-4 border border-solid border-transparent outline-none rounded-xl cursor-pointer hover:border-primary-100 font-medium flex items-center relative duration-['0.4s'];
+  @apply py-3 px-4 border border-solid border-transparent outline-none rounded-xl cursor-pointer hover:border-primary font-medium flex items-center relative duration-['0.4s'];
 
   &::after {
     @apply block absolute top-0 left-0 rounded-xl opacity-0 w-full h-full transition-all duration-500;
@@ -24,10 +24,10 @@
 
 .primary-button {
   @extend .button;
-  @apply bg-primary-100 text-white hover:bg-primary-50;
+  @apply bg-primary text-white;
 }
 
 .secondary-button {
   @extend .button;
-  @apply bg-transparent border border-solid border-primary-100 text-primary-100 hover:text-primary-50;
+  @apply bg-transparent border border-solid border-primary text-primary hover:text-primary;
 }
