--- a/src/app/components/atoms/nav-menu-item/nave-menu-item-styles.scss
+++ b/src/app/components/atoms/nav-menu-item/nave-menu-item-styles.scss
@@ -1,3 +1,3 @@
 .menu-link-item {
-  @apply w-max h-full px-2 border border-solid border-primary hover:bg-transparentGrey1 cursor-pointer text-center;
+  @apply w-max h-full hover:bg-[#0000001a] flex items-center justify-center px-4 border-solid border-primary cursor-pointer text-center transition-all duration-300;
 }
