--- a/src/app/components/layouts/main-dashboard-layout/main-dashboard-layout-styles.scss
+++ b/src/app/components/layouts/main-dashboard-layout/main-dashboard-layout-styles.scss
@@ -1,8 +1,8 @@
 .main-layout-wrapper {
-  @apply relative left-0 top-0 w-screen h-screen p-4;
+  @apply relative m-0 left-0 top-0 w-screen h-screen overflow-x-hidden;
 
   main {
-    @apply w-full;
-    height: calc(100vh - 6rem);
+    @apply w-full mt-20;
+    height: calc(100vh - 5rem);
   }
 }
